--- a/action.yml
+++ b/action.yml
@@ -21,7 +21,7 @@ inputs:
     required: true
   PARAMETERS:
     description: 'Cloudformation Paramaters'
-    required: false
+    required: true
 runs: 
   using: 'node12'
   main: 'dist/index.js'
